components/micork8s/deployment/dashboard-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-lb
  namespace: kube-system
spec:
  type: LoadBalancer
  ports: 
  - port: 1443
    targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
