components/micork8s/deployment/dashboard-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-nodeport
  namespace: kube-system
spec:
  type: NodePort
  ports: 
  - port: 1443
    targetPort: 8443
    nodePort: 30443
  selector:
    app: kubernetes-dashboard
